force-app/main/default/objects/tc9_et__Timesheet__c/fields/tc9_et__Total_Hours__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Total_Hours__c</fullName>
    <description>The total number of hours for the Timesheet</description>
    <inlineHelpText>The total number of hours for the Timesheet</inlineHelpText>
    <label>Total Hours</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>