force-app/main/default/objects/tc9_et__Timesheet__c/fields/tc9_et__Total_Rejected_Expenses__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Total_Rejected_Expenses__c</fullName>
    <description>The Count of the total number of Expenses related to the Timesheet with the Rejection Flag set as checked</description>
    <inlineHelpText>The Count of the total number of Expenses related to the Timesheet with the Rejection Flag set as checked</inlineHelpText>
    <label>Total Rejected Expenses</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>