force-app/main/default/objects/tc9_et__Timesheet__c/fields/tc9_et__Total_Submitted_Timesheet_Allowances__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Total_Submitted_Timesheet_Allowances__c</fullName>
    <description>The count of the total number of Timesheet Allowances related to the Timesheet with the Submission Flag set as checked</description>
    <inlineHelpText>The count of the total number of Timesheet Allowances related to the Timesheet with the Submission Flag set as checked</inlineHelpText>
    <label>Total Submitted Timesheet Allowances</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>