force-app/main/default/objects/tc9_et__Timesheet__c/fields/tc9_et__Total_Timesheet_Entries__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Total_Timesheet_Entries__c</fullName>
    <description>The Count of the total number of Timesheet Entries related to the Timesheet</description>
    <inlineHelpText>The Count of the total number of Timesheet Entries related to the Timesheet</inlineHelpText>
    <label>Total Timesheet Entries</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>