force-app/main/default/objects/tc9_et__Timesheet__c/fields/tc9_et__Transaction_Creation_Stage__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Transaction_Creation_Stage__c</fullName>
    <description>The stage in the transaction creation process the Timesheet is in, updated by the application automatically. 
1 - Timesheet has not been approved 
2 - Timesheet Approved, ready to be processed 
3 - Timesheet has had Transactions created 
4 - The process to create Transactions failed - check Debug Log</description>
    <inlineHelpText>The stage in the transaction creation process the Timesheet is in 
1 - Timesheet has not been approved
2 - Timesheet Approved, ready to be processed
3 - Timesheet has had Transactions created
4 - The process to create Transactions failed - check Debug</inlineHelpText>
    <label>Transaction Creation Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tc9_et__Generate_Transaction_Picklists</valueSetName>
    </valueSet>
</CustomField>