force-app/main/default/objects/tc9_et__Timesheet__c/fields/tc9_et__Transaction_Creation_Status__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Transaction_Creation_Status__c</fullName>
    <description>The stage in the transaction creation process the Timesheet is in, updated by the application automatically. 
New - Timesheet has not been approved 
Ready - Timesheet Approved, ready to be processed 
Processed - Timesheet has had Transactions created 
Failed - The process to create Transactions failed - check Debug Log</description>
    <formula>Case( 
Text(tc9_et__Transaction_Creation_Stage__c), 
&quot;1&quot;, 
&quot;New&quot;, 
&quot;2&quot;, 
&quot;Ready&quot;, 
&quot;3&quot;, 
&quot;Processed&quot;, 
&quot;4&quot;,
&quot;Failed&quot;,
&quot;Custom&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The stage in the transaction creation process the Timesheet is in
New - Timesheet has not been approved
Ready - Timesheet Approved, ready to be processed
Processed - Timesheet has had Transactions created
Fail - Process to create Transactions failed</inlineHelpText>
    <label>Transaction Creation Status (No Colour)</label>
    <type>Text</type>
</CustomField>