force-app/main/default/objects/tc9_et__Timesheet__c/fields/tc9_imp__External_Id__c.field-meta.xml
<CustomField>
    <fullName>tc9_imp__External_Id__c</fullName>
    <description>NOT IN USE</description>
    <externalId>true</externalId>
    <inlineHelpText>NOT IN USE</inlineHelpText>
    <label>External Id - NOT IN USE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>