force-app/main/default/objects/tc9_et__Timesheet__c/fields/tc9_imp__Timesheet_Import__c.field-meta.xml
<CustomField>
    <fullName>tc9_imp__Timesheet_Import__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Timesheet Import</label>
    <referenceTo>tc9_imp__Timesheet_Import__c</referenceTo>
    <relationshipLabel>Timesheets</relationshipLabel>
    <relationshipName>Timesheets</relationshipName>
    <type>Lookup</type>
</CustomField>