force-app/main/default/objects/tc9_et__Timesheet__c/fields/tc9_util__Auto_Approval__c.field-meta.xml
<CustomField>
    <fullName>tc9_util__Auto_Approval__c</fullName>
    <description>If set to Yes, timesheets will be automatically approved by a scheduled process.</description>
    <inlineHelpText>If set to Yes, timesheets will be automatically approved by a scheduled process.</inlineHelpText>
    <label>Auto Approval</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tc9_pr__Yes_No_Picklists</valueSetName>
    </valueSet>
</CustomField>