force-app/main/default/objects/tc9_et__Timesheet__c/fields/tc9_util__CSS__c.field-meta.xml
<CustomField>
    <fullName>tc9_util__CSS__c</fullName>
    <formula>CASE(TEXT(tc9_et__Approval_Status__c),
&quot;New&quot;,&quot;slds-text-heading_medium slds-text-color_tone slds-text-title_caps&quot;,
&quot;Submitted&quot;,&quot;slds-text-heading_medium slds-text-color_default slds-text-title_caps&quot;,
&quot;Approved&quot;,&quot;slds-text-heading_medium slds-text-color_success slds-text-title_caps&quot;,
&quot;slds-text-heading_medium slds-text-color_destructive slds-text-title_caps&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CSS</label>
    <type>Text</type>
</CustomField>