force-app/main/default/objects/tc9_et__Timesheet__c/fields/tc9_util__Edit_Timesheet__c.field-meta.xml
<CustomField>
    <fullName>tc9_util__Edit_Timesheet__c</fullName>
    <formula>IF(ispickval(tc9_et__Approval_Status__c,&quot;Approved&quot;),
HYPERLINK(LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260))  + &quot;s/detail/&quot;+Id, &quot;View Timesheet&quot;, &quot;_self&quot;),
HYPERLINK(LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260))  + &quot;s/detail/&quot;+Id, &quot;Edit Timesheet&quot;, &quot;_self&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Edit Timesheet</label>
    <type>Text</type>
</CustomField>