force-app/main/default/objects/tc9_et__Timesheet__c/fields/tc9_util__EmailApproval__c.field-meta.xml
<CustomField>
    <fullName>tc9_util__EmailApproval__c</fullName>
    <formula>AND(
ISPICKVAL(tc9_et__Approval_Status__c, &quot;Submitted&quot;),
ISBLANK(tc9_util__Last_Email_Approval_Sent_Date__c)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EmailApproval</label>
    <type>Checkbox</type>
</CustomField>