force-app/main/default/objects/tc9_et__Timesheet__c/fields/tc9_util__Employee_TS_Reminder__c.field-meta.xml
<CustomField>
    <fullName>tc9_util__Employee_TS_Reminder__c</fullName>
    <description>If set to TRUE, a reminder will be sent for this Timesheet during the next scheduled batch run.</description>
    <formula>AND(
    ISPICKVAL(tc9_et__Approval_Status__c, &apos;New&apos;),
    tc9_et__End_Date__c &lt; Today(),
    tc9_et__Exclude_From_Employee_Reminder_List__c != TRUE,
    OR(
       DATEVALUE(tc9_et__Last_Employee_Reminder_Sent__c) != Today(),
       ISBLANK(DATEVALUE((tc9_et__Last_Employee_Reminder_Sent__c)))
       )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>If set to TRUE, a reminder will be sent for this Timesheet during the next scheduled batch run.</inlineHelpText>
    <label>Employee TS Reminder</label>
    <type>Checkbox</type>
</CustomField>