force-app/main/default/objects/tc9_et__Timesheet__c/fields/tc9_util__Last_Email_Approval_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>tc9_util__Last_Email_Approval_Sent_Date__c</fullName>
    <label>Last Email Approval Sent Date</label>
    <type>Date</type>
</CustomField>