force-app/main/default/objects/tc9_et__Timesheet__c/fields/tc9_util__Reversed_Count__c.field-meta.xml
<CustomField>
    <fullName>tc9_util__Reversed_Count__c</fullName>
    <inlineHelpText>Number of times this Timesheet has been reversed by the Timesheet Adjustment process.</inlineHelpText>
    <label>Reversed Count</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>