force-app/main/default/objects/tc9_et__Timesheet__c/fields/tc9_util__ScheduledJobProcessed__c.field-meta.xml
<CustomField>
    <fullName>tc9_util__ScheduledJobProcessed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ScheduledJobProcessed</label>
    <type>Checkbox</type>
</CustomField>