force-app/main/default/objects/tc9_et__Timesheet__c/fields/tc9_util__TS_Adjustment_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>tc9_util__TS_Adjustment_Approval_Status__c</fullName>
    <label>TS Adjustment Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>