force-app/main/default/objects/tc9_et__Timesheet__c/fields/tc9_util__View_in_portal__c.field-meta.xml
<CustomField>
    <fullName>tc9_util__View_in_portal__c</fullName>
    <formula>tc9_et__Start_Date__c &lt;= Today() +tc9_et__Assignment__r.tc9_pr__Client__r.tc9_util__TC_Timesheet_Days_in_future__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>View in portal</label>
    <type>Checkbox</type>
</CustomField>