force-app/main/default/objects/tc9_et__Timesheet__c/fields/x2c9_Cross_Assignment_Deletion_Date__c.field-meta.xml
<CustomField>
    <fullName>x2c9_Cross_Assignment_Deletion_Date__c</fullName>
    <label>Cross Assignment Deletion Date</label>
    <type>DateTime</type>
</CustomField>