force-app/main/default/objects/tc9_et__Timesheet__c/fields/x2c9_Cross_Assignment_Details__c.field-meta.xml
<CustomField>
    <fullName>x2c9_Cross_Assignment_Details__c</fullName>
    <description>Details related to the cross-assignment interpretation functionality.
This field will be automatically populated by the process.</description>
    <inlineHelpText>Details related to the cross-assignment interpretation functionality.
This field will be automatically populated by the process.</inlineHelpText>
    <label>Cross Assignment Details</label>
    <type>TextArea</type>
</CustomField>