force-app/main/default/objects/tc9_et__Timesheet__c/listViews/tc9_et__All.listView-meta.xml
<ListView>
    <fullName>tc9_et__All</fullName>
    <columns>NAME</columns>
    <columns>tc9_et__Assignment__c</columns>
    <columns>tc9_et__Employee__c</columns>
    <columns>tc9_et__Payee__c</columns>
    <columns>tc9_et__Approval_Status_Colour__c</columns>
    <columns>tc9_et__Transaction_Creation_Status_Colour__c</columns>
    <columns>tc9_et__Start_Date__c</columns>
    <columns>tc9_et__End_Date__c</columns>
    <columns>tc9_et__Total_Hours__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>