force-app/main/default/objects/tc9_et__Timesheet__c/listViews/tc9_et__Submitted_Timesheets.listView-meta.xml
<ListView>
    <fullName>tc9_et__Submitted_Timesheets</fullName>
    <columns>NAME</columns>
    <columns>tc9_et__Assignment__c</columns>
    <columns>tc9_et__Employee__c</columns>
    <columns>tc9_et__Payee__c</columns>
    <columns>tc9_et__Approval_Status_Colour__c</columns>
    <columns>tc9_et__Transaction_Creation_Status_Colour__c</columns>
    <columns>tc9_et__Start_Date__c</columns>
    <columns>tc9_et__End_Date__c</columns>
    <columns>tc9_et__Total_Hours__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>tc9_et__Approval_Status__c</field>
        <operation>equals</operation>
        <value>Submitted</value>
    </filters>
    <label>Submitted Timesheets</label>
</ListView>